--- a/LaTeX report/content/task_10_3.tex
+++ b/LaTeX report/content/task_10_3.tex
@@ -90,5 +90,18 @@ The group observed that the state never reached the optimal trajectory, even wit
 \clearpage
 
 \subsection{MATLAB and Simulink}
-\textit{Code and diagrams go here}
+\lstinputlisting[caption= {MATLAB code for lab 3}, label={lst:lab4_matlab}]{code/problem_3.m}
+\subsubsection{Simulink}
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=1\linewidth, keepaspectratio]{code/lab3_simulink_1}
+	\caption{Simulink diagram used in lab 3.}
+	\label{fig:lab3_simulink}
+\end{figure}
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=1\linewidth, keepaspectratio]{code/lab3_simulink_2}
+	\caption{``LQR Feedback'' subsystem in \cref{fig:lab3_simulink}}
+	\label{fig:lab3_simulink_lqr}
+\end{figure}
 \end{document}
