Fic figure captions and add *.slx models for screenshot

--- a/LaTeX report/content/task_10_4.tex
+++ b/LaTeX report/content/task_10_4.tex
@@ -117,7 +117,7 @@ In the tuning process we decided to keep $ \bm R $ and $ \bm Q $ as diagonal mat
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=\linewidth]{figures/LAB4_travel_gains.png}
-	\caption{Her er alle verdiene vi brukte, bør nok rydde opp litt.}
+	\caption{Plot showing the effect of varying the entry in $ \bm Q $ related to travel. The rest of the $ \bm Q $-values are 1.}
 	\label{fig:lab4_diff_Q_values}
 \end{figure}
 
@@ -125,7 +125,7 @@ In the tuning process we decided to keep $ \bm R $ and $ \bm Q $ as diagonal mat
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=\linewidth]{figures/LAB4_elevation_gains.png}
-	\caption{Her er alle verdiene vi brukte, bør nok rydde opp litt.}
+	\caption{Plot showing the effect of varying the entry in $ \bm Q $ related to elevation. The travel-gain in $ \bm Q $ is 15, while the other values are 1.}
 	\label{fig:lab4_diff_elevation_values}
 \end{figure}
 
