--- a/LaTeX report/preamble.sty
+++ b/LaTeX report/preamble.sty
@@ -28,3 +28,6 @@
 \usepackage{graphicx} % Provides the \includegraphics command.
 \usepackage{hyperref} % Provides clickable links. Always load last, but before cleveref.
 \usepackage{cleveref}
+
+\usepackage{tikz}
+\usetikzlibrary{angles,quotes}
