Add missing sentence

--- a/LaTeX report/content/task_10_4.tex
+++ b/LaTeX report/content/task_10_4.tex
@@ -146,7 +146,7 @@ The group had two criterions on what defined a reasonable trajectory:
 	\item The trajectory created should be physical possible (or at least close to possible) for the helicopter to achieve.
 	\item The time used to go from $ \lambda_0 $ to $ \lambda_f $ should be as small as possible.
 \end{enumerate}
-The group tested different values for $ q_1 $ and $ q_2 $ in \cref{eq:lab4_cost_func}. In the end, the result shown in \cref{fig:LAB4_best_tuning} fulfilled both these criterions well compared to other configurations, so the group decided that using $ q_1 = q_2 = 1 $ was a fair trajectory. Even though there are some error in the pitch and elevation response
+The group tested different values for $ q_1 $ and $ q_2 $ in \cref{eq:lab4_cost_func}. In the end, the result shown in \cref{fig:LAB4_best_tuning} fulfilled both these criterions well compared to other configurations, so the group decided that using $ q_1 = q_2 = 1 $ was a fair trajectory. Even though there are some error in the pitch and elevation response, the travel response becomes good which was our main focus during tuning.
 
 \subsection{Decoupled model} \label{sec:lab4_decoupled}
 As states in the problem description, the two last states are completely decoupled from the first four states. Or put in other words, the dynamics describing elevation is completely independent on the pitch and travel. This is of course not the case in reality, and illustrates how simplicity of the model!
