--- a/LaTeX report/content/task_10_4.tex
+++ b/LaTeX report/content/task_10_4.tex
@@ -188,7 +188,7 @@ A simple force analysis will show that the states are not decoupled as described
 \end{figure}
 Also there is a lot of rotational forces that have not been considered in the model. E.g. the travel rate $ r $ will create a centripetal force going along the helicopter arm, and point inwards to the origin of the arm. If the helicopter arm is not completely horizontal, this centripetal force will have a component in the direction of the elevation. The main point is that our model is a very simplified version of the real physics of the helicopter. In reality the helicopter is a complex system, which we can never define 100 \% exact with a mathematical formulation.
 
-The effect this has on our optimal trajectory, is that our solver considers elevation as a system that is completely independent on the other states. This can of course be turned the other way around, as the optimal pitch- and travel-trajectory are also independent on the optimal elevation trajectory. The optimal trajectories are therefore ``wrong'', since the elevation is clearly not independent on the other states! In practice the decoupled model will always model the elevation for a helicopter that is horizontal and still. I.e. it will always model where the rotor forces points directly upwards. Therefore, the further away the helicopter is from the still horizontal state, the larger the error due to the decoupled model becomes. 
+The effect this has on our optimal trajectory, is that our solver considers elevation as a system that is completely independent on the other states. This can of course be turned the other way around, as the optimal pitch- and travel-trajectory are also independent on the optimal elevation trajectory. The optimal trajectories are therefore ``wrong'', since the elevation is clearly not independent on the other states! It is wrong in the sense that the optimal trajectories may be impossible to achieve in the real world. The decoupled model will always model the elevation for a helicopter that is horizontal and still (the linearization point). I.e. it will always model a helicopter where the rotor forces points directly upwards. Therefore, the further away the helicopter is from the linearization point, the larger the error due to the decoupled model becomes. 
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=\linewidth]{figures/LAB4_elevation_gains.png}
