--- a/LaTeX report/content/task_10_3.tex
+++ b/LaTeX report/content/task_10_3.tex
@@ -2,25 +2,28 @@
 \begin{document}
 
 \section{Optimal Control of Pitch/Travel with Feedback (LQ)}
-In this task we add feedback to the optimal controller that we developed in \cref{kap:Part2OptimalControlWithoutFeedback}. Feedback is clearly needed as¨the experimental results in \cref{kap:task_10_2_experimental_results} show that the helicopter response quickly deviates from the optimal trajectory because of pitch-offset - adding feedback could reduce or eliminate this deviation.
+In this task we add feedback to the optimal controller that we developed in \cref{kap:Part2OptimalControlWithoutFeedback}.
+
+\subsection{Motivation}
+The experimental results in \cref{kap:task_10_2_experimental_results} clearly shows that planning a sequence of inputs does not produce the expected sequence of outputs - as that section explains there are many reasons for travel-drift. In situations with drift without feedback then the output will not follow the planned trajectory, but adding feedback could compensate for the drift and offset and therefore reduce or eliminate the deviation from the planned trajectory.
 
 The results achieved in this section shows that adding feedback greatly improves performance.
 
 \subsection{Introducing feedback}
 There are many approaches to adding feedback, but in this assignment only two will be considered: linear state feedback and model predictive control.
 
-Linear state feedback adds a new control layer below the optimization layer, the advanced control layer. This layer controls the pitch setpoint to the basic control layer based on a control law that considers the optimal trajectory and the current state of the system. If the states deviate from the optimal value the input is changed accoridn gto the pitch-control equation:
+\textbf{Linear state feedback} adds a new control layer below the optimization layer, the advanced control layer. This layer controls the pitch setpoint to the basic control layer based on a control law that considers the optimal trajectory and the current state of the system. If the states deviate from the optimal value the input is changed according to the pitch-control equation:
 \begin{equation}\label{eq:lab3_feedback}
 	u_k = u_k^* - \bm{K}^T(\bm x_k - \bm x_k^*)
 \end{equation}
-where $u_k^*$ and $\bm x_k^*$ are the optimal input and state trajectories predicted in the optimization layer, $u_k$ is the next input and $x_k$ is the current state. $K$ is the linear state feedback term. 
+where $u_k^*$ and $\bm x_k^*$ are the optimal input and state trajectories predicted in the optimization layer, $u_k$ is the next input and $x_k$ is the current state. $K$ is the linear state feedback gain. 
 
-In this exercise the gain matrix $K$ is calculated as an LQ controller, see \cref{kap:task_10_3_LQ_controller} for more info about the exact implementation.
+In this exercise the gain matrix $K$ is calculated as an infinite horizon LQ controller, see \cref{kap:task_10_3_LQ_controller} for more info about the exact implementation.
 
-Model Predictive Control (MPC) is a completely different solution: the optimal trajectory is recalculated at every timestep. See \cref{kap:10_3_mpc} for more info about how that could be implemented here.
+\textbf{Model Predictive Control (MPC)} is a completely different solution: the optimal trajectory is recalculated at every timestep - instead of compensating for deviation from optimal, the optimal is recalculated to get a new possible trajectory based on the current states. See \cref{kap:10_3_mpc} for more info about how that could be implemented here.
 
 \subsection{LQ controller} \label{kap:task_10_3_LQ_controller}
-As explained in the problem description\todo{cref}, an LQ (or linear-quadratic) controller, solves the quadratic objective function given by
+A Linear Quadratic (LQ) controller minimizes the quadtratic objective function:
 \begin{equation}
     J = \sum^\infty_{i=0} \Delta x_{i+1}^\top Q \Delta x_{i+1} + \Delta u_i^\top R \Delta u_i, \quad Q \ge0, \quad R > 0
 \end{equation}
@@ -28,12 +31,34 @@ for a linear model
 \begin{equation}\label{eq:lab3_lin_model}
 	\Delta x=A\Delta x_i + B \Delta u_i
 \end{equation}
-without including inequality constraints.
 Here $ \Delta x = x - x^*$ and $\Delta u = u - u^*$ are deviations from the optimal trajectory.
 
-The matrix $Q$ and the scalar $R$ are the weights of the optimalization problem. $Q$ determines how much state-deviations should be penalized, while $R$ determines how much input-deviation should be punished. This allows the designer to optimize the regulator to the specific implementation: Is it more important to have low input-deviation than state-deviation?
+This formulation is an infinite horizon linear quadratic regulator which has a solution with a constant linear feedback gain, $K$ - which is exactly what was specified previously! Note that this regulator does not have any constraints.
 
-In this system there is only one constraint on the input; that it shall not exceed 30 degrees. Therefore a small R-value compared to Q is warranted. This will produce a regulator that tries harder to minimize state-deviation than input-deviation.
+\subsubsection{Choosing the weights}
+The matrix $Q$ and the scalar $R$ are the weights of the optimalization problem. $Q$ determines how much state-deviations should be penalized, while $R$ determines how much input-deviation should be punished. What needs to prioritezed depends on the application.
+
+In this case the system is a helicopter where the goal is to control the travel of the helicopter. The travel is the most important state, while travelrate, pitch and pitchrate are secondary. Thus it makes sense to prioritize keeping travel close to the planned trajectory - it is of course not possible to keep all states close to the trajectory. This motivates a \textbf{state-weight} with relatively high value related to travel.
+
+The input from the LQR regulator is the pitch-setpoint - which in this case does not need to follow the planned optimal trajectory. Thus a low \textbf{input-weight} is warranted. \textit{However} the pitch-setpoint has a constraint but this implementation of LQR does not have any constraints! The result is that input-use could fall outside the constraint imposed on the optimization layer (this is clearly happening in the experiments performed in the lab).
+
+\subsubsection{Calculating the solution}
+Calculating the solution to the LQR problem is trivial using Matlab:
+\begin{lstlisting}[language=Matlab]
+% The discrete system described as a state space system, Ad and Bd must be defined
+
+% W1 is the weigth of travel
+% W2 is the weight of travelrate
+% W3 is the weight of pitch
+% W4 is the weight of pitchrate
+Q = diag([W1, W2, W3, W4]);
+
+% W5 is the weight of the input
+R = W5;
+
+% The function dlqr is used to solve the LQR problem
+[K, S, e] = dlqr(Ad, Bd, Q, R);
+\end{lstlisting}
 
 \subsection{Model Predictive Control}\label{kap:10_3_mpc}
 Model Predictive Control is another way of introducing feedback to an optimal control system. In an MPC controlled system the optimal response and input is recalculated at every timestep, the input used is simply the first of the optimal input values calculated at every step.
@@ -43,45 +68,62 @@ This is a drastically different approach to the LQ-method impemented in this lab
 \subsubsection{Modified Control Hierarchy with MPC}
 Rather than introducing the Advanced Control Layer with the LQ-controller; introducing MPC would introduce the feedback to the Optimization Layer instead. The optimization layer would use the current state value and generate an optimal trajectory to the target, outputting pitch-setpoints to the Basic control layer at every timestep.
 
-\subsection{Experimental results} \label{sec:lab3_result}
-It is very clear that introducing feedback produced results much better than the ones achieved without feedback, almost regardless of the tuning of the LQR regulator. This is of course what was expected.
+\subsection{Experimental results}\label{sec:lab3_result}
+The group performed a host of controlled tests with different tunings within five different targets:
+\begin{enumerate}
+	\item Prioritizing input use, see \cref{fig:LAB3_R_variations}
+	\item Prioritizing travel, see \cref{fig:LAB3_Q_variations_travel}
+	\item Prioritizing travelrate, see \cref{fig:LAB3_Q_variations_travelrate}
+	\item Prioritizing pitch, see \cref{fig:LAB3_Q_variations_pitch}
+	\item Prioritizing pitchrate, see \cref{fig:LAB3_Q_variations_pitchrate}
+\end{enumerate}
 
-The group performed experiments with different values of Q and R to analyze the performance of the helicopter with different tunings.
+It is very clear that introducing feedback produced results much better than the ones achieved without feedback, almost regardless of the tuning of the LQR regulator.
 
-\Cref{fig:LAB3_R_variations} shows that changing the R-value did not drastically change the response, nevertheless it was observed that a larger R-value produces greater state-offset and smaller input-offset.
+Prioritizing input usage only has a slight effect, the input usage does get slightly closer to the planned trajectory but not by much. This could be pushed further by weighing states lower, but this was not explored as doing so will only result in the same system as the previous lab-exercise where u was exactly the planned trajectory. Interestingely the \textit{pitch-response}, a state, is improved because of the close relation to the setpoint.
 
-\Cref{fig:LAB3_Q_variations} shows that increasing the Q-value greatly reduces the offset from the optimal and actual travel response. It was also observed that this caused oscillations in the input-values.
+Prioritizing travel has a great effect on the travel - resulting in almost perfect travel response. Unfortunately this also introduced oscillations in pitch-setpoint, pitch and pitchrate.
 
-The experimental results are consistent with the theory of the LQ controller laid out in \cref{kap:task_10_3_LQ_controller}.
+Prioritizing travelrate, pitch and pitchrate results in resonses closer to the planned trajectory, but this is not further discussed as travel is the state most important to control - theese experiments were only to show that it would be possble should another state be valuable.
 
-The group observed that the state never reached the optimal trajectory, even with very high Q-values. The group believes that adding integration to the LQ-regulator would eliminate the stationary- and reduce the dynamic offset. This was however not explored further.
+\subsubsection{Possible improvements}
+The group observed that the state never reached the optimal trajectory, even with very high Q-values. The group believes that adding integration to the LQ-regulator would eliminate the stationary- and reduce the dynamic offset.
+
+Another improvement is to impose a constraint on the input-use on the advanced control layer. This could either be achieved using a different feedback strategy, or by simply saturating the input. If the simple limiting saturation is chosen then it would make sense to set the optimizatoin layers constraint slightly lower to limit the saturation.
+
+\subsubsection{Plots}
 
 \begin{figure}[h]
-    \includegraphics[width=\linewidth]{figures/LAB3_R_variations.png}
+	\centering
+    \includegraphics[width=0.8\linewidth]{figures/LAB3_R_variations.png}
 	\caption{Results of varying R-values wihle keeping Q=diag([1,1,1,1])}
 	\label{fig:LAB3_R_variations}
 \end{figure}
 
 \begin{figure}[h]
-	\includegraphics[width=\linewidth]{figures/LAB3_Q_variations.png}
+	\centering
+	\includegraphics[width=0.8\linewidth]{figures/LAB3_Q_variations.png}
 	\caption{Results of varying Q-values while keeping $R=1$}
 	\label{fig:LAB3_Q_variations_travel}
 \end{figure}
 
 \begin{figure}[h]
-	\includegraphics[width=\linewidth]{figures/LAB3_Q_variations_travelrate.png}
+	\centering
+	\includegraphics[width=0.8\linewidth]{figures/LAB3_Q_variations_travelrate.png}
 	\caption{Results of varying Q-values while keeping $R=1$}
 	\label{fig:LAB3_Q_variations_travelrate}
 \end{figure}
 
 \begin{figure}[h]
-	\includegraphics[width=\linewidth]{figures/LAB3_Q_variations_pitch.png}
+	\centering
+	\includegraphics[width=0.8\linewidth]{figures/LAB3_Q_variations_pitch.png}
 	\caption{Results of varying Q-values while keeping $R=1$}
 	\label{fig:LAB3_Q_variations_pitch}
 \end{figure}
 
 \begin{figure}[h]
-	\includegraphics[width=\linewidth]{figures/LAB3_Q_variations_pitchrate.png}
+	\centering
+	\includegraphics[width=0.8\linewidth]{figures/LAB3_Q_variations_pitchrate.png}
 	\caption{Results of varying Q-values while keeping $R=1$}
 	\label{fig:LAB3_Q_variations_pitchrate}
 \end{figure}
